--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+    implementation 'com.arthenica:ffmpeg-kit-full:6.0'
+    implementation 'com.google.android.gms:play-services-cast-framework:21.3.0'
 }
 
 apply from: 'capacitor.build.gradle'
