--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pages:build": "pnpm gen:runtime && pnpm gen:manifest && next build --webpack && npx @cloudflare/next-on-pages --experimental-minify"
   },
   "dependencies": {
+    "@capacitor-community/media": "^8.0.1",
     "@capacitor/android": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0",
